@@ -999,7 +999,7 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen:message_warning">Warning</epp:phrase>
 	<epp:phrase id="Plugin/Screen:no_render_subclass">Error. $screen->render should be sub-classed for <epc:pin name="screen"/>.</epp:phrase>
    
-    <epp:phrase id="Plugin/Screen/Items:title">Items</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Items:title">Manage deposits</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Review:title">Editorial review</epp:phrase>
     <epp:phrase id="Plugin/Screen/Review:list_desc">Items under review</epp:phrase>
