@@ -55,6 +55,11 @@ function EPJS_toggleSlide( element_id, start_visible )
 
 function EPJS_toggle( element_id, start_visible )
 {
+	EPJS_toggle_type( element_id, start_visible, 'block' );
+}
+
+function EPJS_toggle_type( element_id, start_visible, display_type )
+{
 	element = $(element_id);
 
 	current_vis = start_visible;
@@ -63,7 +68,7 @@ function EPJS_toggle( element_id, start_visible )
 	{
 		current_vis = false;
 	}
-	if( element.style.display == "block" )
+	if( element.style.display == display_type )
 	{
 		current_vis = true;
 	}
@@ -74,7 +79,7 @@ function EPJS_toggle( element_id, start_visible )
 	}
 	else
 	{
-		element.style.display = "block";
+		element.style.display = display_type;
 	}
 }
 
