@@ -11,7 +11,6 @@ select, input.ep_form_text, textarea {
 	border: solid 1px #ccc;
 }
 
-
 .ep_form_example {
 	font-weight: bold;
 	color: blue;
