@@ -1,5 +1,8 @@
+
+
 .ep_mail_view {
 	border: dashed 2px #ccc;
+	margin-top: 20px;
 	background-color: #eee;
 }
 
