@@ -76,7 +76,7 @@ ul.ep_tm_menu li a:visited {
 
 .ep_tm_searchbarbutton {
 	color: #ccc;
-	border: #606060 1px solid;
+	/*border: #606060 1px solid;*/
 	background-color: #606060; 
 	font-weight: bold;
 	font-size: 80%;
