@@ -89,7 +89,7 @@ sub get_basic_input_elements
 	my $size = ( $maxlength > $self->{input_cols} ?
 					$self->{input_cols} : 
 					$maxlength );
-	my $input = $session->render_input_field(
+	my $input = $session->render_noenter_input_field(
 		class => "ep_form_text",
 		type => "password",
 		name => $basename,
