@@ -85,6 +85,7 @@ sub process
 
 	my $content = $self->screen->render;
 	my $links = $self->screen->render_links;
+	my $toolbar = $self->screen->render_toolbar;
 	my $title = $self->screen->render_title;
 
 	my $page = $self->{session}->make_doc_fragment;
@@ -101,7 +102,13 @@ sub process
 
 	$page->appendChild( $content );
 
-	$self->{session}->build_page( $title, $page, undef, $links );
+	$self->{session}->prepare_page(  
+		{
+			title => $title, 
+			page => $page,
+			head => $links,
+			toolbar => $toolbar,
+		} );
 	$self->{session}->send_page();
 }
 
